--- a/mukaan-de/src/index.css
+++ b/mukaan-de/src/index.css
@@ -15,6 +15,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #111;
+    color: white;
+  }
+}
+
+
 a {
   font-weight: 500;
   color: #646cff;
